// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/alice/grpc/ext/ext.proto";
import "github.com/stratumn/alice/grpc/event/event.proto";

package stratumn.alice.grpc.chat;

option go_package = "github.com/stratumn/alice/grpc/chat;chat";

// The chat service definition.
service Chat {
  // Sends a message to a peer.
  rpc Message (ChatMessage) returns (Ack) {
    option (stratumn.alice.grpc.ext.method_desc) = "Send a message to a peer";
  }
}

// A chat message.
message ChatMessage {
  bytes peer_id = 1 [
    (stratumn.alice.grpc.ext.field_desc) = "Peer ID",
    (stratumn.alice.grpc.ext.field_required) = true,
    (stratumn.alice.grpc.ext.field_base58) = true
  ];
  string message = 2 [
    (stratumn.alice.grpc.ext.field_desc) = "Message content"
  ];
}

// An empty ack.
message Ack {
}